--- a/compose.yaml
+++ b/compose.yaml
@@ -1,36 +1,32 @@
-version: '3.8'
+version: '3'
 
 services:
   web:
-    build: .
-    image: # путь к образу из Яндекс Облака
+    build: ./Dockerfile.python
     networks:
       backend:
         ipv4_address: 172.20.0.5
     restart: always
-    depends_on:
-      - db
     environment:
-      MYSQL_HOST: db
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      - MYSQL_HOST=db
+      # Другие переменные для подключения к MySQL
 
   db:
     image: mysql:8
     networks:
       backend:
         ipv4_address: 172.20.0.10
-    restart: always
+    restart: on-failure
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=<пароль>
+      - MYSQL_DATABASE=<название_бд>
+      - MYSQL_USER=<пользователь>
+      - MYSQL_PASSWORD=<пароль_пользователя>
+    env_file:
+      - .env
 
 networks:
   backend:
-    driver: bridge
 
 include:
-  - proxy.yaml
+  - ./proxy.yaml
