--- a/compose.yaml
+++ b/compose.yaml
@@ -1,47 +1,24 @@
 version: '3.8'
-
 services:
   web:
-    build: ./Dockerfile.python
+    build: .
+    restart: always
     networks:
       backend:
         ipv4_address: 172.20.0.5
-    restart: always
     environment:
       - MYSQL_HOST=db
-      # Другие переменные для подключения к MySQL
-
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+      - MYSQL_DATABASE=database
   db:
     image: mysql:8
     networks:
       backend:
         ipv4_address: 172.20.0.10
-    restart: on-failure
-    environment:
-      - MYSQL_ROOT_PASSWORD=<пароль>
-      - MYSQL_DATABASE=<название_бд>
-      - MYSQL_USER=<пользователь>
-      - MYSQL_PASSWORD=<пароль_пользователя>
-    env_file:
-      - .env
 
-  reverse-proxy:
-    image: haproxy
-    restart: always
-    networks:
-      - backend
-    ports:
-      - "127.0.0.1:8080:8080"
-    volumes:
-      - ./haproxy/reverse/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:rw
-
-  ingress-proxy:
-    image: nginx:latest
-    restart: always
-    network_mode: host
-    volumes:
-      - ./nginx/ingress/default.conf:/etc/nginx/conf.d/default.conf:rw
-      - ./nginx/ingress/nginx.conf:/etc/nginx/nginx.conf:rw
+include:
+  - proxy.yaml
 
 networks:
   backend:
@@ -49,6 +26,3 @@ networks:
     ipam:
       config:
         - subnet: 172.20.0.0/24
-
-include:
-  - ./proxy.yaml
